--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quill-variable-poc",
+  "name": "quill-playground",
   "version": "0.1.0",
   "private": false,
   "homepage": "http://ThHareau.github.io/quill-playground",
